# lizzieyzyqt

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  PLAN.md  README.md
.github/workflows/: qt-cmake.yml
cmake/: FirstReleaseScopeCheck.cmake  LayerBoundaryCheck.cmake  LocalizationTextCheck.cmake  NoDirectUiGtpCommands.cmake  NoJavaUiDeps.cmake  StyleCheck.cmake  VerifyPackage.cmake
docs/: Migration.md  PlanCoverage.md  PlanRequirementAudit.md  TargetAcceptanceReport.md  Verification.md
src/: main.cpp
src/app/: AnalysisStore.cpp  AnalysisStore.h  AnalysisStreamGate.cpp  AnalysisStreamGate.h  AppSettings.cpp  AppSettings.h  BatchAnalysisRun.cpp  BatchAnalysisRun.h  BatchAnalysisTracker.cpp  BatchAnalysisTracker.h  CMakeLists.txt  EngineAutomation.cpp  EngineAutomation.h  EngineCommandDispatcher.cpp  EngineCommandDispatcher.h  EngineCommandPlanner.cpp  EngineCommandPlanner.h  EngineManager.cpp  EngineManager.h  FileWrite.cpp  FileWrite.h  FirstRun.cpp  FirstRun.h  GameDocumentSession.cpp  GameDocumentSession.h  GameEditor.cpp  GameEditor.h  GameSetup.cpp  GameSetup.h  LegacyConfigImport.cpp  LegacyConfigImport.h  PositionRequestGuard.cpp  PositionRequestGuard.h  SessionSettings.cpp  SessionSettings.h  SettingsRuntime.cpp  SettingsRuntime.h  WindowPlacement.cpp  WindowPlacement.h
src/core/: BoardPosition.cpp  BoardPosition.h  CMakeLists.txt  GameModel.cpp  GameModel.h  Sgf.cpp  Sgf.h  Types.cpp  Types.h
src/engine/: AnalysisJson.cpp  AnalysisJson.h  AnalysisProcess.cpp  AnalysisProcess.h  BatchAnalysis.cpp  BatchAnalysis.h  CMakeLists.txt  GtpCommandQueue.cpp  GtpCommandQueue.h  GtpProtocol.cpp  GtpProtocol.h  KataGoConfig.cpp  KataGoConfig.h  KataGoProcess.cpp  KataGoProcess.h  KataGoRules.cpp  KataGoRules.h  PositionSync.cpp  PositionSync.h  ProcessDiagnostics.cpp  ProcessDiagnostics.h  ProcessEnvironment.cpp  ProcessEnvironment.h  RealtimeAnalysis.cpp  RealtimeAnalysis.h  ThreadedAnalysisProcess.cpp  ThreadedAnalysisProcess.h  ThreadedKataGoProcess.cpp  ThreadedKataGoProcess.h
src/ui/: AnalysisGraphWidget.cpp  AnalysisGraphWidget.h  AnalysisStreamGate.h  BoardQuickItem.cpp  BoardQuickItem.h  CMakeLists.txt  EngineAutomation.h  EngineSettingsDialog.cpp  EngineSettingsDialog.h  FileWrite.h  GtpConsoleWidget.cpp  GtpConsoleWidget.h  LegacyConfigImport.h  MainWindow.cpp  MainWindow.h  PositionRequestGuard.h  SettingsApply.h
tests/: CMakeLists.txt  analysis_graph_widget_tests.cpp  analysis_json_tests.cpp  analysis_process_fixture_tests.cpp  app_session_settings_tests.cpp  app_settings_model_tests.cpp  batch_analysis_tests.cpp  board_quick_item_tests.cpp  ci_workflow_tests.cmake  cli_argument_tests.cmake  cli_diagnostics_readiness_tests.cmake  cli_diagnostics_tests.cmake  cli_target_acceptance_report_tests.cmake  core_tests.cpp  engine_automation_tests.cpp  engine_protocol_tests.cpp  engine_worker_tests.cpp  fake_analysis_engine.cpp  fake_katago.cpp  file_write_tests.cpp  first_release_scope_check_script_tests.cmake  gtp_console_widget_tests.cpp  katago_integration_preflight_tests.cmake  katago_integration_tests.cpp  katago_process_fixture_tests.cpp  layer_boundary_check_script_tests.cmake  legacy_config_import_tests.cpp  localization_text_check_tests.cmake  no_direct_ui_gtp_commands_script_tests.cmake  no_java_ui_deps_script_tests.cmake  performance_tests.cpp  platform_cmake_tests.cmake  position_sync_tests.cpp  realtime_analysis_tests.cpp  settings_apply_tests.cpp  settings_dialog_tests.cpp  target_acceptance_image_fixture.cpp  ui_smoke_tests.cpp  verify_package_script_tests.cmake
